syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "GameServiceProtos";

message GameRating {
  int32 game_id = 1;
  google.protobuf.Int32Value rating = 2;
};